Fixed Sidecar gap and header widget CSS

--- a/style.css
+++ b/style.css
@@ -1042,6 +1042,11 @@ figcaption,
 	word-wrap: normal !important;
 }
 
+.header-widget-area {
+	float: right;
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
 
 /* Site Navigation
 ---------------------------------------------------------------------------- */
@@ -1583,7 +1588,7 @@ p.entry-meta {
 
 	.content {
 		float: left;
-		width: 75%;
+		width: 70%;
 	}
 
 	.sidebar-content .content {
